bugfix: card keeps flipping back on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -434,9 +434,15 @@ footer a {
 .card .front {
     background: repeating-linear-gradient( 45deg, var(--bg-lighter), var(--bg-lighter) 10px, var(--bg-outer) 10px, var(--bg-outer) 20px);
 }
+.card.flipped .front {
+    z-index: 1;
+}
 .card .back {
     background: var(--bg-lighter);
     transform: rotateY(180deg);
+}
+.card.flipped .back {
+    z-index: 2;
 }
 
 /* items on card */
